# bfti-bot

./: .gitignore  README.md  pyproject.toml
.vim/: coc-settings.json
bfti_bot/: __main__.py  bot.py  config.py  default_scheduler.py  logs.py  task.py
bfti_bot/background_task/: __init__.py  default_scheduler.py  task.py
bfti_bot/extensions/: management.py  misc.py  ping.py  yeet.py
bfti_bot/tasks/: iserv_calendar.py  iserv_exercises.py  iserv_mails.py  say_hello.py
scripts/: Run.ps1  run.bash
